--- a/css/estilos.css
+++ b/css/estilos.css
@@ -158,3 +158,16 @@ body {
 .bg-excel {
     background-color: #3bbe28;
 }
+
+.wrapper {
+    display: flex;
+    width: 100%;
+}
+
+#v-pills-tab {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    z-index: 999;
+}
